package com.taxicooperativa.model;

public enum EstadoSolicitud {
    EN_ESPERA, EN_ATENCION, CANCELADA, FINALIZADA
}
