package com.taxicooperativa.service;

public class Operador {
    private String operadorNombre;
    private String operadorId;

    public void atenderSolicitud(){
    }

    public void cancelarSolicitud(){
    }
}