package com.taxicooperativa.service;

import com.taxicooperativa.model.TipoServicio;

public class TipoServicioFactory {
    /**
    public TipoServicio crear(String tipo){
        return TipoServicio;
    }
     **/
}
